Adding MHTML support into Page Load Metrics

Offline Previews metrics will not be reported currently because the
MIME-type sniffing only allows text/html or application/xhtml+xml.
MHTML, entires pages saved as one file are mime-type multipart/related
(https://en.wikipedia.org/wiki/MIME#Multipart_subtypes). Offline
previews are treated as HTTP/HTTPS MHTML pages from the perspective of
the chrome page load metrics harness, and treated as HTML documents in
blink. This should mean that offline pages are the only class of MHTML
pages that will be tracked in the harness.

BUG=693776

Review-Url: https://codereview.chromium.org/2699213002
Cr-Commit-Position: refs/heads/master@{#451906}

Former-commit-id: 07205c9be7b8fa35aa6079b6027f6261761b62c3