chrome/browser/page_load_metrics/observers/previews_page_load_metrics_observer.cc
@@ -4,8 +4,6 @@
 
 #include "chrome/browser/page_load_metrics/observers/previews_page_load_metrics_observer.h"
 
-#include <string>
-
 #include "base/optional.h"
 #include "base/time/time.h"
 #include "chrome/browser/page_load_metrics/page_load_metrics_util.h"
@@ -46,6 +44,18 @@ page_load_metrics::PageLoadMetricsObserver::ObservePolicy
 PreviewsPageLoadMetricsObserver::OnCommit(
     content::NavigationHandle* navigation_handle) {
   return IsOfflinePreview(navigation_handle->GetWebContents())
+             ? CONTINUE_OBSERVING
+             : STOP_OBSERVING;
+}
+
+page_load_metrics::PageLoadMetricsObserver::ObservePolicy
+PreviewsPageLoadMetricsObserver::ShouldObserveMimeType(
+    const std::string& mime_type) const {
+  // On top of base-supported types, support MHTML. Offline previews are served
+  // as MHTML (multipart/related).
+  return PageLoadMetricsObserver::ShouldObserveMimeType(mime_type) ==
+                     CONTINUE_OBSERVING ||
+                 mime_type == "multipart/related"
              ? CONTINUE_OBSERVING
              : STOP_OBSERVING;
 }
