chrome/renderer/page_load_metrics/renderer_page_track_decider.cc
@@ -45,13 +45,14 @@ int RendererPageTrackDecider::GetHttpStatusCode() {
 bool RendererPageTrackDecider::IsHtmlOrXhtmlPage() {
   // Ignore non-HTML documents (e.g. SVG). Note that images are treated by
   // Blink as HTML documents, so to exclude images, we must perform
-  // additional mime type checking below.
+  // additional mime type checking below. MHTML is tracked as HTML in blink.
   if (!document_->isHTMLDocument() && !document_->isXHTMLDocument())
     return false;
 
   // Ignore non-HTML mime types (e.g. images).
   blink::WebString mime_type = data_source_->response().mimeType();
-  return mime_type == "text/html" || mime_type == "application/xhtml+xml";
+  return mime_type == "text/html" || mime_type == "application/xhtml+xml" ||
+         mime_type == "multipart/related";
 }
 
 }  // namespace page_load_metrics
